# fitboddy-profile-service

./: .gitignore  README.md  alembic.ini  profile_service_test.db  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_profile_tables.py  0002_add_personal_fields_to_client_profiles.py  0003_add_workout_location_to_profiles.py  0004_replace_equipment_with_unavailable.py  0005_add_age_gender_to_profiles.py
lib/application/: commands.py  config.py  errors.py  gateways.py  media_storage.py  models.py  repositories.py  runtime.py  use_cases.py
lib/domain/: entities.py  equipment.py
lib/presentation/http/: error_translator.py  main.py  request_factory.py  response_factory.py  schemas.py
lib/presentation/http/handlers/: profile_handler.py
lib/presentation/http/routes/: admin_routes.py  profile_routes.py  system_routes.py
tests/: conftest.py
tests/unit/: test_http_endpoints.py
